# verisim

./: .gitignore  LICENSE  README.md  RESEARCH-LOG.md  SPEC-2.md  SPEC-3.md  SPEC-4.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
bench/: croissant.json  datasheet.md  model-card.md
bench/cc_corpus/: BY_PROJECT.csv  RESULTS.csv  extract.py  summary.json
bench/ra10/: RESULTS.md  harden.py
bench/ra11/: RESULTS.md  learned_guardrail.py
bench/ra12/: Dockerfile  RESULTS.md  context.py
bench/ra13/: Dockerfile  RESULTS.md  mac_baseline.py
bench/ra14/: Dockerfile  RESULTS.md  diff_cost.py  exfil.py
bench/ra15/: Dockerfile  RESULTS.md  covert.py
bench/ra6/: Dockerfile  Dockerfile.disguised  live_gate.py
bench/ra7/: RESULTS.md  battery.py
bench/ra8/: Dockerfile  RESULTS.md  reach.py
bench/ra9/: Dockerfile  RESULTS.md  cumulative.py
bench/tb_safety/: CAPABILITY_full80.csv  RESULTS.csv  gate_eval.py
configs/: auto.json  calibration.json  cf1.json  cf2.json  cf3.json  cf4.json  cf5.json  cf6.json  cs3_system_anchor.json  cx0.json  cx1.json  cx3.json  cx4.json  cx5.json  e1.json  e2.json  e3.json  e4.json  ed10.json  ed12.json  ed12_learned.json  ed13.json  ed14.json  ed15.json  ed16.json  ed17.json  ed18.json  ed19.json  ed1_dist.json  ed1_learned.json  ed2.json  ed20.json  ed21.json  ed22.json  ed23.json  ed24.json  ed25.json  ed26.json  ed27.json  ed28.json  (+92 more)
cue/: croissant.json  datasheet.md  model-card.md  task-card.md
docs/: README.md  cc-corpus-run.md  certifier-findings.md  coverage-synthesis-run.md  cumulative-horizon-run.md  distributed-semantics.md  essay-state-not-capability.md  frontier-close-run.md  host-semantics.md  learned-proposer-eval-run.md  learned-proposer-run.md  lineage.md  live-run-2026-06-20.md  llm-guardrail-audit-run.md  model-representation.md  monitor-auditor-depth-run.md  monitor-auditor-run.md  network-semantics.md  neural-proposer-run.md  openlore-ingest-contract.md  openlore-integration-viability.md  paper.md  related-work.md  report.md  review.md  semantics.md  terminal-bench-run.md  verification.md
docs/essays/: the-verifier-is-the-primitive.md
docs/specs/: SPEC-10.md  SPEC-11.md  SPEC-12.md  SPEC-13.md  SPEC-14.md  SPEC-15.md  SPEC-16.md  SPEC-17.md  SPEC-18.md  SPEC-19.md  SPEC-2.1.md  SPEC-2.md  SPEC-20.md  SPEC-21.md  SPEC-22.md  SPEC-23.md  SPEC-24.md  SPEC-25.md  SPEC-26.md  SPEC-27.md  SPEC-28.md  SPEC-3.md  SPEC-4.md  SPEC-5.md  SPEC-6.md  SPEC-7.md  SPEC-8.md  SPEC-9.md  SPEC.md
figures/: A_resolver_hardened.json  A_resolver_unsound.json  A_syntactic_from_empty.json  B_context_aware.json  B_context_static_allow.json  B_cumulative_accumulator.json  B_cumulative_per_resource.json  B_relational_incomplete.json  B_relational_repaired.json  C_resolver_hardened.json  C_resolver_unsound.json  D_external_hook.json  auto_search.csv  calibration.csv  cf1_coverage_frontier.csv  cf2_drift_aci.csv  cf3_risk_control.csv  cf4_signal_split.csv  cf5_cross_world.csv  cf6_real_signal.csv  cl1_cue_leaderboard.csv  claude_direct.json  claude_policy.json  cs1_loadbearing_frontier.csv  cs1_net_frontier.csv  cs3_system_anchor.csv  cu10_targeted_verification.csv  cu11_adversarial_targeting.csv  cu12_knowledge_free_targeting.csv  cu13_replan_net.csv  cu14_incident_response.csv  cu15_verification_exhaustion.csv  cu16_host_targeting.csv  cu17_segmentation_targeting.csv  cu18_dist_targeting.csv  cu19_dist_trained.csv  cu1_safety_gate.csv  cu20_host_trained.csv  cu21_unified_targeting.csv  cu22_availability_targeting.csv  (+341 more)
openspec/changes/: README.md
openspec/changes/add-defanged-codebase-fixture/: proposal.md  tasks.md
openspec/changes/add-headless-cd-pipeline/: proposal.md  tasks.md
openspec/changes/add-openlore-graph-adapter/: proposal.md  tasks.md
openspec/changes/add-sandbox-trace-oracle/: proposal.md  tasks.md
openspec/changes/add-synthesized-edge-feedback/: proposal.md  tasks.md
openspec/changes/add-trajectory-oscillation-breaker/: proposal.md  tasks.md
openspec/decisions/: adr-0001-smart-w-eh5-per-subsystem-decode-entropy-via-op-bu.md  adr-0002-hc8-7-llm-callable-simulator-hostsimulator-with-im.md  adr-0003-hc8-16-trustless-verified-contribution-and-host-faithfulness-benchmark.md  adr-0004-spec-10-hs1-scale-faithful-horizon-along-model-cap.md  adr-0005-spec-7-ds0-increment-1-replicated-kv-under-partiti.md  adr-0006-fold-the-distributed-world-ed1-into-the-cross-worl.md  adr-0007-pivot-conclude-research-program-coverage-certifier.md
plans/: SPEC-27-honest-evaluation.md  SPEC-28-certifier-mvp.md
schemas/: verisim-feedback-v1.json
scripts/: claude_code_coverage_hook.py  verify_invariants.py
scripts/examples/: weak_denylist_hook.py
src/verisim/: __init__.py
src/verisim/acd/: __init__.py  adversarial_gate.py  adversarial_targeting.py  availability_targeting.py  certified_gate.py  closed_loop_agent.py  closed_loop_dist.py  closed_loop_host.py  closed_loop_net.py  closed_loop_replan.py  closed_loop_replan_net.py  closed_loop_verify.py  composite_targeting.py  composite_trained.py  concurrent_targeting.py  containment.py  cumulative_targeting.py  dist_targeting.py  drift_asymmetry.py  footprintless_targeting.py  forensic_oracle.py  (+27 more)
tests/: __init__.py  test_acd_containment.py  test_acd_train.py  test_action.py  test_adversarial_gate.py  test_adversarial_targeting.py  test_aggregate.py  test_apply.py  test_auto.py  test_availability_targeting.py  test_bench.py  test_bits.py  test_bridge.py  test_calibration.py  test_calibration_experiment.py  test_causal.py  test_certified_gate.py  test_certify.py  test_cf.py  test_closed_loop_agent.py  test_closed_loop_dist.py  test_closed_loop_host.py  test_closed_loop_net.py  test_closed_loop_replan.py  test_closed_loop_replan_net.py  test_closed_loop_verify.py  test_composite_targeting.py  test_composite_trained.py  test_concurrent_targeting.py  test_conformal.py  test_contrib.py  test_control_plane.py  test_coverage.py  test_cs3_system_anchor.py  test_cu2_gates.py  test_cue_leaderboard.py  test_cue_pack.py  test_cue_tasks.py  test_cumulative_targeting.py  test_cx.py  (+286 more)
(+488 files in other folders)
