[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verisim"
version = "0.0.1"
description = "Oracle-grounded, neuro-symbolic world models of computer environments (v0 deterministic core)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Clay Good" }]
keywords = ["world-models", "neuro-symbolic", "oracle", "faithfulness", "cyber-defense"]
# v0 deterministic core (M0-M3) has no runtime dependencies. The neural model
# (M4+) adds PyTorch; it is intentionally kept out of the base install so the
# env/oracle/metrics foundation stays installable and testable without a GPU.
dependencies = []

[project.optional-dependencies]
# The learned world model (M4+) adds PyTorch; kept out of the base install so the
# env/oracle/delta/loop/metrics core stays installable and testable without it.
model = ["torch>=2.2", "numpy>=1.24"]
viz = ["matplotlib>=3.7"]  # E1 figure plotting (SPEC-2 §7.3); not needed at runtime
# M8 packaging (SPEC-2 §15). The faithfulness benchmark core and the RL
# environment are dependency-free; only the Inspect *adapter* needs inspect_ai.
eval = ["inspect_ai>=0.3"]
# The system oracle (SPEC-11): a real /bin/sh behind the Oracle protocol. Pure standard
# library (subprocess/os/resource/tempfile), so this extra pins *no* third-party dependency
# -- it is a documentation marker that the dependency-free promise is preserved. The oracle
# runs on any POSIX host (macOS-first per SPEC-11 §2.5; Linux CI confirms for free).
system = []
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11", "build>=1.2"]

[project.scripts]
# The headless CD pipeline entry point (OpenSpec ``add-headless-cd-pipeline``): materialize a
# fixture from a source repo and run the full intent→simulate→trace→evaluate→breaker→prepare loop,
# stopping before the human-gated delivery. Pure standard library — pins no third-party dependency.
verisim-cd = "verisim.pipeline.cd:main"

[project.urls]
Homepage = "https://github.com/clay-good/verisim"
Specification = "https://github.com/clay-good/verisim/blob/main/SPEC.md"

[tool.hatch.build.targets.wheel]
packages = ["src/verisim"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# The spec uses Greek math notation (ρ for the consultation rate, α for the
# per-step acceptance, etc.); allow the letters ruff flags as Latin-confusable
# so docstrings match the spec.
allowed-confusables = ["ρ", "α", "γ", "×", "−"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
# Tests build small ad-hoc states; allow untyped test functions without noise,
# but still type-check their bodies (so real type errors surface). The model tests
# call into PyTorch's incompletely-typed API (e.g. ``loss.backward()``), so relax the
# torch-specific ``disallow_untyped_calls`` here too — the same rationale as the
# model/train/netmodel source override below; real type errors still surface.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false

# PyTorch's public API is incompletely typed; under strict mypy that produces
# unavoidable Any-propagation noise in the model/train modules. Relax the
# torch-specific strict checks there only; the rest of the codebase stays strict.
[[tool.mypy.overrides]]
module = ["verisim.model.*", "verisim.train.*", "verisim.netmodel.*", "verisim.hostmodel.*"]
disallow_untyped_decorators = false
disallow_untyped_calls = false
warn_return_any = false

# The Inspect adapter (SPEC-2 §15) imports the optional ``inspect_ai`` lazily; its
# types are absent unless the ``[eval]`` extra is installed, so relax strict
# typing for that one module. The benchmark *core* stays strict.
[[tool.mypy.overrides]]
module = ["verisim.eval.inspect_task", "verisim.hosteval.inspect_task", "verisim.disteval.inspect_task"]
disallow_untyped_decorators = false
disallow_untyped_calls = false
warn_return_any = false
warn_unused_ignores = false

# ``inspect_ai`` (the optional ``[eval]`` extra) ships no stubs and is absent in CI.
[[tool.mypy.overrides]]
module = ["inspect_ai.*"]
ignore_missing_imports = true

# ``anthropic`` (the run-on-demand real-LLM lane, LP7) is optional and absent in CI; resolve its
# import without stubs so the lazy import in claude_agent needs no inline ignore.
[[tool.mypy.overrides]]
module = ["anthropic.*"]
ignore_missing_imports = true

# The Terminal-Bench custom agent (SPEC-22 RA20) imports the optional ``terminal_bench`` harness,
# which ships no stubs and is absent in CI (the live TB lane, like the model-API lane, is run-on-
# demand, not in CI). Relax strict typing for that one bridge module; the verisim core stays strict.
[[tool.mypy.overrides]]
module = ["terminal_bench.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["verisim.realagent.tb_agent"]
disallow_subclassing_any = false
disallow_untyped_calls = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
